# spark-rapids

./: .gitattributes  .gitignore  .gitmodules  .nspect-vuln-allowlist.toml  .output4.parquet.crc  .pre-commit-config.yaml  .scalafmt.conf  .whitesource  AGENTS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW_GUIDELINES.md  CONTRIBUTING.md  DF_UDF_README.md  LICENSE  NOTICE  NOTICE-binary  README.md  REVIEW.md  REVIEW_RAW.md  SECURITY.md  SHUFFLE_COALESCE_TEST_README.md  _config.yml  build.sh  build_rapids.sh  diff.patch  fastparquet.txt  git show 6f4899a0e088405ddc7ca6a26b810c98d8a80d11  git_show  index.md  new_shims  outfile-buildver  outfileTest  output4.parquet  performance_test_shuffle_coalesce.scala  plan.md  pom.xml  (+8 more)
.github/: 404.html  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yaml  copilot-instructions.md
.greptile/: config.json  files.json  rules.md
_data/: releases.yml
_include/: analytics.html
_includes/: analytics.html
aggregator/: pom.xml
aggregator-tmp/: pom.xml
api_validation/: README.md  auditAllVersions.sh  pom.xml
benchark/: get_json_object_stress_gen.scala  (+1 more)
ml/native/: CMakeLists.txt
ml/native/src/: CMakeLists.txt  cublas_jni.cpp
skills/: .gitignore  README.md  pyproject.toml
skills/ci/: Dockerfile.pre-merge  pre-merge.sh
skills/docs/dev/: EVALS.md  TESTING.md  VERSIONS.md
skills/evals/resources/array-segment-sum/: README.md
skills/evals/resources/array-segment-sum/common/: ArraySegmentSumRapidsUDF.scala
skills/evals/resources/array-segment-sum/judge/: UnitTest.scala
skills/examples/: CalculateRiskUDF.scala  FormatPhoneUDF.java  IntegerMultiplyBy2UDF.java
skills/scripts/: sync_eval_resources.py
skills/tests/: __init__.py  fixtures.py  test_frontmatter.py  test_jvm_templates.py  test_skill_frontmatter.py  utils.py
skills/tests/resources/: IntegerMultiplyBy2Jni.cpp  IntegerMultiplyBy2NativeRapidsUDF.java  IntegerMultiplyBy2RapidsUDF.java  IntegerMultiplyBy2RapidsUDF.scala  IntegerMultiplyBy2UDF.java  IntegerMultiplyBy2UDF.scala  integer_multiply_by_2.cu  integer_multiply_by_2.hpp  integer_multiply_by_2.sql
skills/tests/test_export/: __init__.py  cuda_fixtures.py  java_fixtures.py  jvm_fixtures.py  scala_fixtures.py  test_jvm.py  utils.py
skills/tests/test_export/resources/: IntegerMultiplyBy2NativeRapidsUDF.java  integer_multiply_by_2.cu
skills/udf-benchmark/: CUDF_MICROBENCHMARKS.md  SKILL.md
skills/udf-benchmark/evals/: config.yml  evals.json
skills/udf-convert-to-cuda/: SKILL.md
skills/udf-convert-to-cuda/evals/: config.yml  evals.json
skills/udf-convert-to-cuda/examples/: CosineSimilarityJni.cpp  CosineSimilarityNativeRapidsUDF.java  cosine_similarity.cu  cosine_similarity.hpp
skills/udf-convert-to-cuda/references/: JNI_CUDA_GUIDE.md  NATIVE_BUILD_ENV.md
skills/udf-convert-to-cuda/templates/cuda/: Dockerfile
skills/udf-convert-to-cuda/templates/cuda/native/scripts/: extract-cudf-libs.sh
skills/udf-convert-to-cuda/templates/cuda/native/src/main/cpp/: CMakeLists.txt
skills/udf-convert-to-cuda/templates/cuda/native/src/main/cpp/src/: PlaceholderUDFNameJni.cpp  placeholder_udf_name.cu  placeholder_udf_name.hpp
skills/udf-convert-to-cuda/templates/cuda/src/main/java/com/udf/: NativeUDFLoader.java  PlaceholderUDFNameNativeRapidsUDF.java
skills/udf-convert-to-cudf/: SKILL.md
skills/udf-convert-to-cudf/evals/: config.yml  evals.json
skills/udf-convert-to-cudf/examples/: URLDecode.java  URLDecodeExtendsFunction.scala  URLDecodeHive.java  URLDecodeWithField.scala
skills/udf-convert-to-cudf/references/: RAPIDS_UDF.md
skills/udf-convert-to-sql/: SKILL.md
skills/udf-convert-to-sql/evals/: config.yml  evals.json
skills/udf-convert-to-sql/evals/environment/: Dockerfile
skills/udf-convert-to-sql/evals/files/array-segment-sum/: ArraySegmentSumUDF.scala
skills/udf-convert-to-sql/examples/: FormatPhone.java  FormatPhone.scala  FormatPhoneHive.java  NormalizeTags.java  NormalizeTags.scala  NormalizeTagsHive.java  format_phone.sql  normalize_tags.sql
skills/udf-gen-test/: SKILL.md
skills/udf-gen-test/evals/: config.yml  evals.json
skills/udf-gen-test/templates/java/: pom.xml  run_gen_data.sh  run_spark_benchmark.sh
skills/udf-gen-test/templates/java/src/main/java/com/udf/: SparkUtils.java
skills/udf-gen-test/templates/java/src/main/java/com/udf/bench/: BenchUtils.java  GenData.java  MicroBenchRunner.java  SparkBenchRunner.java
skills/udf-gen-test/templates/java/src/test/java/com/udf/: CudfComparisonTest.java  SqlComparisonTest.java  TestUtils.java  UnitTest.java
skills/udf-gen-test/templates/scala/: pom.xml  run_gen_data.sh  run_micro_benchmark.sh  run_spark_benchmark.sh
skills/udf-gen-test/templates/scala/src/main/scala/com/udf/: Arm.scala  SparkUtils.scala
skills/udf-gen-test/templates/scala/src/main/scala/com/udf/bench/: BenchUtils.scala  GenData.scala  MicroBenchRunner.scala  SparkBenchRunner.scala
skills/udf-gen-test/templates/scala/src/test/scala/com/udf/: CudfComparisonTest.scala  SqlComparisonTest.scala  TestUtils.scala  UnitTest.scala
skills/udf-judge-conversion/: SKILL.md
skills/udf-judge-conversion/evals/: config.yml  evals.json
skills/udf-judge-conversion/evals/files/array-segment-sum/: CudfComparisonTest.scala
skills/udf-optimize-cudf/: SKILL.md
skills/udf-optimize-cudf/evals/: config.yml  evals.json
skills/udf-optimize-cudf/evals/files/array-segment-sum/: UnitTest.scala
skills/udf-optimize-cudf/references/: OPTIMIZATION_PATTERNS.md
udf-examples/src/main/cpp/: CMakeLists.txt
udf-examples/src/main/cpp/benchmarks/: CMakeLists.txt
udf-examples/src/main/cpp/benchmarks/cosine_similarity/: cosine_similarity_benchmark.cpp
udf-examples/src/main/cpp/benchmarks/fixture/: benchmark_fixture.hpp
udf-examples/src/main/cpp/benchmarks/synchronization/: synchronization.cpp  synchronization.hpp
udf-examples/src/main/cpp/src/: CosineSimilarityJni.cpp  StringWordCountJni.cpp  cosine_similarity.cu  cosine_similarity.hpp  decimal_array_product.cu  decimal_array_product.hpp  string_word_count.cu  string_word_count.hpp
(+9258 files in other folders)
